kubernetes/istio/updated-istio-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    app: istio-ingress
    istio: ingress
spec:
  type: NodePort
  ports:
  - port: 15021
    targetPort: 15021
    protocol: TCP
    name: status-port
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http2
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 15020
    targetPort: 15020
    protocol: TCP
    name: http-envoy-prom
  selector:
    app: istio-ingress
    istio: ingress
