kubernetes/istio/frontend-backend-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-backend-route
spec:
  hosts:
  - "*"
  gateways:
  - ${var.environment}/istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service
        port:
          number: 5000
  - route:
    - destination:
        host: frontend-service
        port:
          number: 5050
