kubernetes/istio/test.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-backend-route 
  namespace: prod
spec:
  gateways:
  - istio-system/istio-ingress-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        exact: /error
    - uri:
        exact: /metrics
    route:
    - destination:
        host: backend-service
        subset: v1
        port:
          number: 5000
      weight: 10
    - destination:
        host: backend-service
        subset: v2
        port:
          number: 5000
      weight: 90
    timeout: 1s
    retries:
      attempts: 3
      perTryTimeout: 0.5s
      retryOn: 5xx,gateway-error,connect-failure,refused-stream
  - route:
    - destination:
        host: frontend-service
        port:
          number: 5050
    timeout: 0.5s
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system 
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
  namespace: prod
spec:
  host: backend-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
